# grok-web-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/grok-client/: Cargo.toml
crates/grok-client/examples/: basic.rs
crates/grok-client/src/: auth.rs  challenge.rs  client.rs  error.rs  lib.rs  streaming.rs
crates/grok-client/src/endpoints/: artifacts.rs  chat.rs  code.rs  conversations.rs  files.rs  google_drive.rs  memory.rs  mod.rs  sharing.rs  suggestions.rs  voice.rs
crates/grok-client/src/types/: artifacts.rs  chat.rs  code.rs  common.rs  conversation.rs  files.rs  memory.rs  mod.rs  models.rs  response.rs  sharing.rs  suggestions.rs  voice.rs
crates/grok-server/: Cargo.toml
crates/grok-server/src/: auth.rs  config.rs  error.rs  main.rs  state.rs  update_keys.rs
crates/grok-server/src/routes/: artifacts.rs  chat.rs  code.rs  conversations.rs  files.rs  google_drive.rs  health.rs  memory.rs  mod.rs  models.rs  openai_compat.rs  raw.rs  sharing.rs  suggestions.rs  voice.rs
