[workspace]
resolver = "2"
members = ["crates/grok-client", "crates/grok-server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
bytes = "1"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
