[package]
name = "grok-client"
description = "Typed Rust client for Grok's internal web API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wreq = { version = "5.3", features = ["json", "stream", "cookies", "gzip"] }
wreq-util = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
pin-project-lite = "0.2"
memchr = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
rand = "0.9"
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
